# lusi-svn

trunk/lusi/: ChangeLog  Makefile.am  Makefile.dist  configure.ac  cppunit.m4
trunk/lusi/m4/: cppunit.m4
trunk/lusi/po/: Makefile.in.in  Makevars  POTFILES.in  es.po  lusi.pot
trunk/lusi/src/lusi/: Installer.cpp  Installer.h  Makefile.am  Module.cpp  Module.h  Uninstaller.cpp  Uninstaller.h
trunk/lusi/src/lusi/configuration/: ConfigurationCloner.cpp  ConfigurationCloner.h  ConfigurationLoader.cpp  ConfigurationLoader.h  ConfigurationParameter.cpp  ConfigurationParameter.h  ConfigurationParameterAnd.cpp  ConfigurationParameterAnd.h  ConfigurationParameterBool.cpp  ConfigurationParameterBool.h  ConfigurationParameterComposed.cpp  ConfigurationParameterComposed.h  ConfigurationParameterDouble.cpp  ConfigurationParameterDouble.h  ConfigurationParameterInt.cpp  ConfigurationParameterInt.h  ConfigurationParameterLocalUrl.cpp  ConfigurationParameterLocalUrl.h  ConfigurationParameterMap.cpp  ConfigurationParameterMap.h  ConfigurationParameterOr.cpp  ConfigurationParameterOr.h  ConfigurationParameterPriority.h  ConfigurationParameterSimple.cpp  ConfigurationParameterSimple.h  ConfigurationParameterString.cpp  ConfigurationParameterString.h  ConfigurationParameterVisitor.h  ConfigurationParametersSet.cpp  ConfigurationParametersSet.h  ConfigurationPaths.cpp  ConfigurationPaths.h  ConfigurationSaver.cpp  ConfigurationXmlDeserializer.cpp  ConfigurationXmlDeserializer.h  ConfigurationXmlSerializer.cpp  ConfigurationXmlSerializer.h  InvalidConfigurationException.cpp  InvalidConfigurationException.h  Makefile.am  (+2 more)
trunk/lusi/src/lusi/package/: LocalFileResource.cpp  LocalFileResource.h  Makefile.am  Package.cpp  Package.h  PackageId.cpp  PackageId.h  PackageManager.cpp  PackageManager.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  Resource.cpp  Resource.h  ResourceMap.cpp  ResourceMap.h
trunk/lusi/src/lusi/plugin/: Makefile.am  PluginLoader.cpp  PluginLoader.h
trunk/lusi/src/lusi/task/: BuildTask.cpp  BuildTask.h  ConfigureTask.cpp  ConfigureTask.h  ExecuteTaskException.cpp  ExecuteTaskException.h  ExtractTask.cpp  ExtractTask.h  InstallTask.cpp  InstallTask.h  LoggedEventType.h  Makefile.am  NoTaskAvailableException.h  Task.cpp  Task.h  TaskConfiguration.cpp  TaskConfiguration.h  TaskConfigurationManager.cpp  TaskConfigurationManager.h  TaskLogger.cpp  TaskLogger.h  TaskLoggerObserver.h  TaskManager.cpp  TaskManager.h  TaskProgress.cpp  TaskProgress.h  TaskProgressObserver.h
trunk/lusi/src/lusi/util/: Group.cpp  IdSmartPtrMap.h  LocalFile.cpp  LocalFile.h  LocalUrl.cpp  LocalUrl.h  Makefile.am  NullPointerException.cpp  NullPointerException.h  OpenCommunicationChannelsException.cpp  OpenCommunicationChannelsException.h  PipeProcessLinuxCommunication.cpp  PipeProcessLinuxCommunication.h  Process.cpp  Process.h  ProcessException.cpp  ProcessException.h  ProcessLinux.cpp  ProcessLinux.h  ProcessLinuxCommunication.cpp  ProcessLinuxCommunication.h  ProcessObserver.h  ProcessRunner.cpp  ProcessRunner.h  PtyProcessLinuxCommunication.cpp  PtyProcessLinuxCommunication.h  SmartPtr.h  SuProcess.cpp  SuProcess.h  SuProcessException.cpp  SuProcessException.h  SuProcessLinux.cpp  SuProcessLinux.h  SuProcessLinuxConverser.cpp  SuProcessLinuxConverser.h  User.cpp  User.h  i18n.cpp  i18n.h
trunk/lusi/test/lusi/: LusiMainTest.cpp  Makefile.am
trunk/lusi/test/lusi/configuration/: ConfigurationClonerTest.cpp  ConfigurationClonerTest.h  ConfigurationLoaderTest.h  ConfigurationParameterAndTest.cpp  ConfigurationParameterAndTest.h  ConfigurationParameterBoolTest.cpp  ConfigurationParameterBoolTest.h  ConfigurationParameterComposedTest.cpp  ConfigurationParameterComposedTest.h  ConfigurationParameterComposedTestImplementation.cpp  ConfigurationParameterComposedTestImplementation.h  ConfigurationParameterDoubleTest.cpp  ConfigurationParameterIntTest.cpp  ConfigurationParameterIntTest.h  ConfigurationParameterLocalUrlTest.cpp  ConfigurationParameterMapTest.cpp  ConfigurationParameterMapTest.h  ConfigurationParameterOrTest.cpp  ConfigurationParameterOrTest.h  ConfigurationParameterSimpleTest.cpp  ConfigurationParameterSimpleTest.h  ConfigurationParameterSimpleTestImplementation.cpp  ConfigurationParameterSimpleTestImplementation.h  ConfigurationParameterStringTest.cpp  ConfigurationParameterTest.cpp  ConfigurationParameterTest.h  ConfigurationParameterTestImplementation.cpp  ConfigurationParameterTestImplementation.h  ConfigurationPathsTest.cpp  ConfigurationPathsTest.h  ConfigurationSaverTest.cpp  ConfigurationSaverTest.h  ConfigurationTestSuite.cpp  ConfigurationTestSuite.h  ConfigurationXmlDeserializerTest.cpp  ConfigurationXmlDeserializerTest.h  ConfigurationXmlSerializerTest.cpp  Makefile.am
trunk/lusi/test/lusi/package/: Makefile.am  PackageIdTest.cpp  PackageIdTest.h  PackageManagerTest.cpp  PackageManagerTest.h  PackageTest.cpp  PackageTest.h  PackageTestSuite.cpp  ProfileManagerTest.cpp  ProfileTest.cpp  ProfileTest.h  ResourceMapTest.cpp  ResourceMapTest.h  ResourceTest.cpp  ResourceTest.h  ResourceTestImplementation.cpp  ResourceTestImplementation.h
trunk/lusi/test/lusi/task/: Makefile.am  TaskConfigurationTest.cpp  TaskConfigurationTest.h  TaskLoggerObserverTestImplementation.cpp  TaskLoggerObserverTestImplementation.h  TaskLoggerTest.cpp  TaskManagerTest.cpp  TaskManagerTest.h  TaskProgressObserverTestImplementation.cpp  TaskProgressObserverTestImplementation.h  TaskProgressTest.cpp  TaskProgressTest.h  TaskTest.cpp  TaskTest.h  TaskTestImplementation.cpp  TaskTestImplementation.h  TaskTestSuite.cpp  TaskTestSuite.h
trunk/lusi/test/lusi/util/: BaseProcessLinuxCommunicationTest.cpp  BaseProcessLinuxCommunicationTest.h  GroupTest.cpp  IdSmartPtrMapTest.cpp  IdSmartPtrMapTest.h  LocalFileTest.cpp  LocalFileTest.h  LocalUrlTest.cpp  LocalUrlTest.h  Makefile.am  PipeProcessLinuxCommunicationTest.h  ProcessLinuxTest.cpp  ProcessLinuxTest.h  ProcessObserverTestImplementation.cpp  ProcessObserverTestImplementation.h  ProcessRunnerTest.h  ProcessTest.cpp  ProcessTest.h  UserTest.h  (+14 more)
(+255 files in other folders)
