INCLUDES = -I$(top_srcdir)/src

liblusiincludedir = $(includedir)/lusi/task/helper
liblusiinclude_HEADERS = BuildTaskHelper.h ConfigureConfigureTaskHelper.h \
	ExtractTaskHelper.h InstallTaskHelper.h MakeBuildTaskHelper.h MakeInstallTaskHelper.h \
	TarExtractTaskHelper.h TaskHelper.h TaskHelperManager.h

noinst_LTLIBRARIES = libhelper.la
libhelper_la_SOURCES = BuildTaskHelper.cpp ConfigureConfigureTaskHelper.cpp \
	ExtractTaskHelper.cpp InstallTaskHelper.cpp MakeBuildTaskHelper.cpp MakeInstallTaskHelper.cpp \
	TarExtractTaskHelper.cpp TaskHelper.cpp TaskHelperManager.cpp

