INCLUDES = -I$(top_srcdir)/src

liblusiincludedir = $(includedir)/lusi/task/helper
liblusiinclude_HEADERS = BaseBuildTaskHelper.h ConfigureConfigureTaskHelper.h \
	BaseExtractTaskHelper.h BaseInstallTaskHelper.h MakeBuildTaskHelper.h MakeInstallTaskHelper.h \
	TarExtractTaskHelper.h TaskHelper.h TaskHelperManager.h

noinst_LTLIBRARIES = libhelper.la
libhelper_la_SOURCES = BaseBuildTaskHelper.cpp ConfigureConfigureTaskHelper.cpp \
	BaseExtractTaskHelper.cpp BaseInstallTaskHelper.cpp MakeBuildTaskHelper.cpp MakeInstallTaskHelper.cpp \
	TarExtractTaskHelper.cpp TaskHelper.cpp TaskHelperManager.cpp

